--- a/index.html
+++ b/index.html
@@ -57,5 +57,28 @@
     <script type="text/javascript" src="js/1970-js-demo.js"></script>
     <script type="text/javascript" src="js/word.js"></script>
     <script src="js/main.js"></script>
+    <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-analytics.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+      
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+          apiKey: "AIzaSyDl53MRywj3_OboHxLPZpGaDCpyLHDC7SQ",
+          authDomain: "cyberninja-212.firebaseapp.com",
+          projectId: "cyberninja-212",
+          storageBucket: "cyberninja-212.appspot.com",
+          messagingSenderId: "1071024298182",
+          appId: "1:1071024298182:web:b46817d0165c4bf9d25fc7",
+          measurementId: "G-ZXWE1K3CVQ"
+        };
+      
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+      </script>
 </body>
 </html>
